[gd_scene load_steps=11 format=2]

[ext_resource path="res://shared_assets/pirata_one.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://scenes/menus/level_complete_menu/level_complete_menu.gd" type="Script" id=2]
[ext_resource path="res://scenes/menus/menu_theme.tres" type="Theme" id=3]
[ext_resource path="res://scenes/menus/ui_sound_effects/menu_select___souptonic.wav" type="AudioStream" id=4]
[ext_resource path="res://scenes/menus/ui_sound_effects/menu_confirm___souptonic.wav" type="AudioStream" id=5]
[ext_resource path="res://scenes/menus/custom_button.gd" type="Script" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 1, 0.133333, 0.478431 )

[sub_resource type="DynamicFont" id=2]
size = 72
outline_size = 6
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=3]
size = 36
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 36
font_data = ExtResource( 1 )

[node name="LevelCompleteMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PanelContainer" type="PanelContainer" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 1019.0
margin_bottom = 595.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1

[node name="CenterContainer" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 378.0
margin_top = 100.0
margin_right = 635.0
margin_bottom = 194.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="Label" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/CenterContainer"]
margin_right = 257.0
margin_bottom = 94.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 2 )
text = "Success!!!"

[node name="Scores" type="CenterContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 361.0
margin_top = 240.0
margin_right = 653.0
margin_bottom = 392.0
size_flags_horizontal = 4
size_flags_vertical = 10

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Scores"]
margin_right = 292.0
margin_bottom = 152.0

[node name="RunTime" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Scores/VBoxContainer"]
margin_right = 292.0
margin_bottom = 48.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Completion Time: 00:00"

[node name="EnemiesKilled" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Scores/VBoxContainer"]
margin_top = 52.0
margin_right = 292.0
margin_bottom = 100.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Enemies Killed: 00"

[node name="HighestCombo" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Scores/VBoxContainer"]
margin_top = 104.0
margin_right = 292.0
margin_bottom = 152.0
size_flags_horizontal = 3
size_flags_vertical = 6
custom_fonts/font = SubResource( 3 )
text = "Highest Combo: 00"

[node name="MainMenuButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer"]
margin_left = 429.0
margin_top = 469.0
margin_right = 585.0
margin_bottom = 517.0
mouse_default_cursor_shape = 2
size_flags_horizontal = 4
size_flags_vertical = 6
theme = ExtResource( 3 )
custom_fonts/font = SubResource( 4 )
text = "main menu"
script = ExtResource( 6 )

[node name="Audio" type="Node" parent="."]

[node name="SelectSoundPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 4 )
bus = "UI Sounds"

[node name="ConfirmSoundPlayer" type="AudioStreamPlayer" parent="Audio"]
stream = ExtResource( 5 )
bus = "UI Sounds"
[connection signal="focus_entered" from="PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_Button_focus_entered"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/MainMenuButton" to="." method="_on_MainMenuButton_pressed"]
